# azlyrics-py

./: Pipfile  README.md  pyproject.toml
azlyrics/: __init__.py  azlyrics.py  lyrics.py
tests/: test_azlyrics.py
