[tool.poetry]
name = "azlyrics"
version = "0.1.0"
description = "Python package to download lyrics from azlyrics.com"
authors = ["Manikandan Sundararajan <tsmanikandan@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
