[tool.poetry]
name = "azlyrics"
version = "0.1.0"
description = "Python package to download lyrics from azlyrics.com"
authors = ["Manikandan Sundararajan <tsmanikandan@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
beautifulsoup4 = "^4.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
rope = "^0.14.0"
pylint = "^2.3"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
